@@ -2,11 +2,11 @@ Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
 Version: 1.3.2
-Date: 2013-2-8
-Depends: methods, GSEABase, DESeq, limma (>= 3.15.14)
+Date: 2013-2-12
+Depends: GSEABase, DESeq, limma (>= 3.15.14)
 Imports: Biobase, GSEAlm, Category, bigmemory, bigmemoryExtras (>=
         1.1.2), Matrix (>= 1.0.9), parallel, annotate, genefilter, AnnotationDbi
-Suggests: KEGG.db, reactome.db, RUnit, BiocGenerics, reshape, lattice, GO.db
+Suggests: KEGG.db, reactome.db, RUnit, reshape, lattice, GO.db
 Author: Thomas Sandmann <sandmann.thomas@gene.com>, Richard Bourgon
 	<bourgon.richard@gene.com> and Sarah Kummerfeld
 	<kummerfeld.sarah@gene.com>
@@ -26,14 +26,15 @@ Description:
   class, directly extending GeneSet from the GSEABase package.  To
   increase performance of large queries, multiple gene sets are stored
   as sparse incidence matrices within CMAPCollection eSets. gCMAP
-  offers implementations of 1.  Fisher's exact test (Fisher, J R Stat
+  offers implementations of 1. Fisher's exact test (Fisher, J R Stat
   Soc, 1922) 2. The "connectivity map" method (Lamb et al, Science,
   2006) 3. Parametric and non-parametric t-statistic summaries (Jiang
   & Gentleman, Bioinformatics, 2007) and 4. Wilcoxon / Mann-Whitney
   rank sum statistics (Wilcoxon, Biometrics Bulletin, 1945) as well as
   wrappers for the 5. camera (Wu & Smyth, Nucleic Acid Res, 2012)
   6. mroast and romer (Wu et al, Bioinformatics, 2010) functions from
-  the limma package. All methods return CMAPResult objects, an S4
+  the limma package and 7. wraps the gsea method from the mgsa package 
+  (Bauer et al, NAR, 2010). All methods return CMAPResult objects, an S4
   class inheriting from AnnotatedDataFrame, containing enrichment
   statistics as well as annotation data and providing simple
   high-level summary plots.
@@ -48,6 +49,7 @@ Collate: 'AllClasses.R' 'AllGenerics.R' 'SignedGeneSet-accessors.R'
         'connectivity_score-methods.R' 'featureScore-methods.R'
         'fisher_score-methods.R' 'geneIndex-methods.R'
         'gsealm_jg_score-methods.R' 'gsealm_score-methods.R'
-        'incidence-methods.R' 'mapIdentifiers-methods.R'
+        'incidence-methods.R' 'mgsa_score-methods.R'
+        'mapIdentifiers-methods.R'
         'minSetSize-methods.R' 'mroast_score-methods.R'
         'romer_score-methods.R' 'wilcox_score-methods.R'
