@@ -1,6 +1,9 @@
 \name{NEWS}
 \title{NEWS file for the gCMAP}
 
+\section{Changes in version 1.3.2}{
+ \item{NEW}{New mgsa_score method wrapping the model-based gene set analysis approach available in the mgsa package.}
+
 \section{Changes in version 1.3.1}{
  \item{NEW}{New KEGG2cmap, reactome2cmap, wiki2cmap and go2cmap to functions to generate CMAPCollections from public annotation databases}
 }
